--- a/src/styles/components/_backgrounds-drawer.scss
+++ b/src/styles/components/_backgrounds-drawer.scss
@@ -130,7 +130,6 @@
       position: absolute;
       bottom: var(--spacing-xs);
       right: var(--spacing-xs);
-      z-index: var(--z-tooltip);
       color: var(--color-golden);
       filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.8));
       font-size: calc(var(--font-size-main) * 0.8);
@@ -148,7 +147,6 @@
       position: absolute;
       top: var(--spacing-xs);
       left: var(--spacing-xs);
-      z-index: var(--z-tooltip);
       color: var(--white-100);
       filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.8));
       font-size: calc(var(--font-size-main) * 0.9);
@@ -197,7 +195,6 @@
     backdrop-filter: blur(4px);
     border-radius: var(--base-border-radius);
     padding: var(--spacing-xs);
-    z-index: var(--z-tooltip);
     border: 1px solid var(--theme-border-color);
     gap: var(--spacing-xs);
 
